--- a/index.html
+++ b/index.html
@@ -7,24 +7,21 @@
     <title>Yukikaze</title>
     <script src="./js/jquery.min.js"></script>
     <!-- Live2DCubismCore -->
+    <script src="./js/pixi.min.js"></script>
     <script src="./js/frame/live2dcubismcore.min.js"></script>
     <!-- Include Pixi. -->
-    <script src="./js/frame/pixi.min.js"></script>
-    <!-- Include Cubism Components. -->
     <script src="./js/live2dcubismframework.js"></script>
     <script src="./js/live2dcubismpixi.js"></script>
     <!-- User's Script -->
     <script src="./js/l2d.js"></script>
-    <!-- <script src="https://cdn.jsdelivr.net/gh/litstronger/live2d-moc3@master/js/main.js"></script> -->
-    <script src='./js/main.js'></script>
+    <script src='./js/viewer.js'></script>
 
-    <style>
-    </style>
 </head>
 
 <body>
     <!-- Canvas -->
     <div class="Canvas" id="L2dCanvas"></div>
+    <script src='./js/main.js'></script>
 </body>
 
 </html>
