chore: move to webpack

--- a/index.html
+++ b/index.html
@@ -5,23 +5,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Yukikaze</title>
-    <script src="./js/jquery.min.js"></script>
-    <!-- Live2DCubismCore -->
-    <script src="./js/pixi.min.js"></script>
-    <script src="./js/frame/live2dcubismcore.min.js"></script>
-    <!-- Include Pixi. -->
-    <script src="./js/live2dcubismframework.js"></script>
-    <script src="./js/live2dcubismpixi.js"></script>
-    <!-- User's Script -->
-    <script src="./js/l2d.js"></script>
-    <script src='./js/viewer.js'></script>
-
 </head>
 
 <body>
     <!-- Canvas -->
     <div class="Canvas" id="L2dCanvas"></div>
-    <script src='./js/main.js'></script>
+    <script src='live2dcubismcore.min.js'></script>
+    <script src='main.js'></script>
 </body>
 
 </html>
